@@ -253,6 +253,6 @@ $sql_updates = [
         'info'  => 'Add time_offset to site_config',
         'date'  => '29 Jul, 2018',
         'query' => "INSERT INTO `site_config` (name, value, description) VALUES ('time_offset', 0, 'The number of hours to adjust site from server time. Default 0: site time === server time')",
-        'flush' => 'site_config',
+        'flush' => 'site_settings_',
     ],
 ];
