@@ -1,4 +1,5 @@
 29 Jul 2018
+fix: redis flush cache flushing all databases instead of just redis site db
 update: site_config
 fix: update_torrents.php
 update: database files
